--- a/crds/pomerium/v0.31.3.custom-resource-definitions.yaml
+++ b/crds/pomerium/v0.31.3.custom-resource-definitions.yaml
@@ -134,7 +134,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: pomerium.ingress.pomerium.io
 spec:
   group: ingress.pomerium.io
@@ -183,19 +183,10 @@ spec:
                   Authenticate sets authenticate service parameters.
                   If not specified, a Pomerium-hosted authenticate service would be used.
                 properties:
-                  callbackPath:
-                    description: |-
-                      CallbackPath sets the path at which the authenticate service receives callback responses
-                      from your identity provider. The value must exactly match one of the authorized redirect URIs for the OAuth 2.0 client.
-
-
-                      <p>This value is referred to as the redirect_url in the OpenIDConnect and OAuth2 specs.</p>
-                      <p>Defaults to <code>/oauth2/callback</code></p>
-                    type: string
                   url:
                     description: "AuthenticateURL is a dedicated domain URL\nthe non-authenticated
-                      persons would be referred to.\n\n\n<p><ul>\n <li>You do not
-                      need to create a dedicated <code>Ingress</code> for this\n\t\tvirtual
+                      persons would be referred to.\n\n<p><ul>\n <li>You do not need
+                      to create a dedicated <code>Ingress</code> for this\n\t\tvirtual
                       route, as it is handled by Pomerium internally. </li>\n\t<li>You
                       do need create a secret with corresponding TLS certificate for
                       this route\n\t\tand reference it via <a href=\"#prop-certificates\"><code>certificates</code></a>.\n\t\tIf
@@ -234,6 +225,46 @@ spec:
                 items:
                   type: string
                 type: array
+              circuitBreakerThresholds:
+                description: CircuitBreakerThresholds sets the circuit breaker thresholds
+                  settings.
+                properties:
+                  maxConnectionPools:
+                    description: |-
+                      MaxConnectionPools sets the maximum number of connection pools per
+                      cluster that Envoy will concurrently support at once. If not specified,
+                      the default is unlimited. Set this for clusters which create a large
+                      number of connection pools.
+                    format: int32
+                    type: integer
+                  maxConnections:
+                    description: |-
+                      MaxConnections sets the maximum number of connections that Envoy will
+                      make to the upstream cluster. If not specified, the default is 1024.
+                    format: int32
+                    type: integer
+                  maxPendingRequests:
+                    description: |-
+                      MaxPendingRequests sets the maximum number of pending requests that
+                      Envoy will allow to the upstream cluster. If not specified, the
+                      default is 1024. This limit is applied as a connection limit for
+                      non-HTTP traffic.
+                    format: int32
+                    type: integer
+                  maxRequests:
+                    description: |-
+                      MaxRequests sets the maximum number of parallel requests that Envoy
+                      will make to the upstream cluster. If not specified, the default is
+                      1024. This limit does not apply to non-HTTP traffic.
+                    format: int32
+                    type: integer
+                  maxRetries:
+                    description: |-
+                      MaxRetries sets the maximum number of parallel retries that Envoy
+                      will allow to the upstream cluster. If not specified, the default is 3.
+                    format: int32
+                    type: integer
+                type: object
               codecType:
                 description: CodecType sets the <a href="https://www.pomerium.com/docs/reference/codec-type">Codec
                   Type</a>.
@@ -280,6 +311,102 @@ spec:
                     - lax
                     - none
                     type: string
+                type: object
+              dataBroker:
+                description: DataBroker sets the databroker settings.
+                properties:
+                  clusterLeaderId:
+                    description: ClusterLeaderID defines the cluster leader in a clustered
+                      databroker.
+                    type: string
+                type: object
+              dns:
+                description: DNS sets the dns settings.
+                properties:
+                  failureRefreshRate:
+                    description: FailureRefreshRate is the rate at which DNS lookups
+                      are refreshed when requests are failing.
+                    format: duration
+                    type: string
+                  lookupFamily:
+                    description: LookupFamily is the DNS IP address resolution policy.
+                    enum:
+                    - auto
+                    - v4_only
+                    - v6_only
+                    - v4_preferred
+                    - all
+                    type: string
+                  queryTimeout:
+                    description: QueryTimeout is the amount of time each name server
+                      is given to respond to a query on the first try of any given
+                      server.
+                    format: duration
+                    type: string
+                  queryTries:
+                    description: QueryTries is the maximum number of query attempts
+                      the resolver will make before giving up. Each attempt may use
+                      a different name server.
+                    format: int32
+                    type: integer
+                  refreshRate:
+                    description: RefreshRate is the rate at which DNS lookups are
+                      refreshed.
+                    format: duration
+                    type: string
+                  udpMaxQueries:
+                    description: UDPMaxQueries caps the number of UDP based DNS queries
+                      on a single port.
+                    format: int32
+                    type: integer
+                  useTcp:
+                    description: UseTCP uses TCP for all DNS queries instead of the
+                      default protocol UDP.
+                    type: boolean
+                type: object
+              downstreamMtls:
+                description: DownstreamMTLS sets the <a href="https://www.pomerium.com/docs/reference/downstream-mtls-settings">Downstream
+                  MTLS Settings</a>.
+                properties:
+                  ca:
+                    description: CA is a bundle of PEM-encoded X.509 certificates
+                      that will be treated as trust anchors when verifying client
+                      certificates.
+                    format: byte
+                    type: string
+                  crl:
+                    description: CRL is a bundle of PEM-encoded certificate revocation
+                      lists to be consulted during certificate validation.
+                    format: byte
+                    type: string
+                  enforcement:
+                    description: Enforcement controls Pomerium's behavior when a client
+                      does not present a trusted client certificate.
+                    enum:
+                    - policy_with_default_deny
+                    - policy
+                    - reject_connection
+                    type: string
+                  matchSubjectAltNames:
+                    description: Match Subject Alt Names can be used to add an additional
+                      constraint when validating client certificates.
+                    properties:
+                      dns:
+                        type: string
+                      email:
+                        type: string
+                      ipAddress:
+                        type: string
+                      uri:
+                        type: string
+                      userPrincipalName:
+                        type: string
+                    type: object
+                  maxVerifyDepth:
+                    description: MaxVerifyDepth sets a limit on the depth of a certificate
+                      chain presented by the client.
+                    format: int32
+                    type: integer
                 type: object
               identityProvider:
                 description: |-
@@ -455,7 +582,7 @@ spec:
                 type: object
               secrets:
                 description: "Secrets references a Secret with Pomerium bootstrap
-                  parameters.\n\n\n<p>\n<ul>\n\t<li><a href=\"https://pomerium.com/docs/reference/shared-secret\"><code>shared_secret</code></a>\n\t\t-
+                  parameters.\n\n<p>\n<ul>\n\t<li><a href=\"https://pomerium.com/docs/reference/shared-secret\"><code>shared_secret</code></a>\n\t\t-
                   secures inter-Pomerium service communications.\n\t</li>\n\t<li><a
                   href=\"https://pomerium.com/docs/reference/cookie-secret\"><code>cookie_secret</code></a>\n\t\t-
                   encrypts Pomerium session browser cookie.\n\t\tSee also other <a
@@ -477,12 +604,33 @@ spec:
                   SetResponseHeaders specifies a mapping of HTTP Header to be added globally to all managed routes and pomerium's authenticate service.
                   See <a href="https://www.pomerium.com/docs/reference/set-response-headers">Set Response Headers</a>
                 type: object
+              ssh:
+                description: SSH sets the ssh settings.
+                properties:
+                  hostKeySecrets:
+                    items:
+                      type: string
+                    type: array
+                  userCaKeySecret:
+                    type: string
+                type: object
               storage:
                 description: |-
                   Storage defines persistent storage for sessions and other data.
                   See <a href="https://www.pomerium.com/docs/topics/data-storage">Storage</a> for details.
                   If no storage is specified, Pomerium would use a transient in-memory storage (not recommended for production).
                 properties:
+                  file:
+                    description: File specifies file storage options.
+                    properties:
+                      path:
+                        description: Path defines the local file system path to store
+                          data.
+                        minLength: 1
+                        type: string
+                    required:
+                    - path
+                    type: object
                   postgres:
                     description: Postgres specifies PostgreSQL database connection
                       parameters
